<resources>
    <string name="app_name">Woofer</string>
    <string name="username">Username</string>
    <string name="woofer">Woofer</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="go_to_sign_up">Go to sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="go_to_login">Go to login</string>
</resources>