<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="50dp"
                android:gravity="center|fill_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="48dp"
                    android:layout_height="54dp"
                    app:srcCompat="@drawable/dog"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/textViewWooferTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/woofer"
                    android:textSize="40sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="50dp"
                android:text="@string/login"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextLoginUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:drawableRight="@drawable/ic_drawable_username"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:drawableEnd="@drawable/ic_drawable_username"
                android:autofillHints="username" />

            <EditText
                android:id="@+id/editTextLoginPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:drawableRight="@drawable/ic_drawable_lock"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_drawable_lock"
                android:autofillHints="password" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:onClick="doLogin"
                android:text="@string/login" />

            <TextView
                android:id="@+id/textViewGotosignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:onClick="doGoToSignup"
                android:text="@string/go_to_sign_up" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>