<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSignupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:text="@string/sign_up"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextSignupUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:drawableRight="@drawable/ic_drawable_username"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:drawableEnd="@drawable/ic_drawable_username"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editTextSignupPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:drawableRight="@drawable/ic_drawable_lock"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_drawable_lock"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/editTextSignupConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:drawableRight="@drawable/ic_drawable_lock"
                android:ems="10"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_drawable_lock"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/buttonSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:onClick="doSignup"
                android:text="@string/sign_up" />

            <TextView
                android:id="@+id/textViewGotologin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="100dp"
                android:onClick="doGoToLogin"
                android:text="@string/go_to_login" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>